added list support to custom_menu object, see test.ngt.

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,10 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2>changes on Thursday, January 18, 2024:</h2>
+<ul>
+<li>added list support to custom_menu object, see test.ngt.</li>
+</ul>
 
 <h2>Changes on Wednesday, January 17, 2024:</h2>
 <ul>
