fixes and updates
## changes on Sunday, January 21, 2024:
* added more includes. form(not prepared), map, sound_pool, strings.
* updated the hip.ngt for all the folders.

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,12 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2>changes on Sunday, January 21, 2024:</h2>
+<ul>
+<li>added more includes. form(not prepared), map, sound_pool, strings.</li>
+<li>updated the hip.ngt for all the folders.</li>
+</ul>
+
 <h2>changes on Thursday, January 18, 2024:</h2>
 <ul>
 <li>added list support to custom_menu object, see test.ngt.</li>
