new additions, fixes, and improvements
## changes on Wednesday, January 24, 2024:
* added multiversion class, which will allow you to manage string versions within your game, for instance, 1.4.3.2, which the integer / floatingpoint cannot handle.
* fixed missing right brase in dlg.ngt, class as dialog.
* custom_menu now supports fully functional multiletter navigation. previously, the code had slight issues within access variables within monitor function, but those are now fixed and you can use the fully yet functional multiletter navigation.

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,13 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2>changes on Wednesday, January 24, 2024:</h2>
+<ul>
+<li>added multiversion class, which will allow you to manage string versions within your game, for instance, 1.4.3.2, which the integer / floatingpoint cannot handle.</li>
+<li>fixed missing right brase in dlg.ngt, class as dialog.</li>
+<li>custom_menu now supports fully functional multiletter navigation. previously, the code had slight issues within access variables within monitor function, but those are now fixed and you can use the fully yet functional multiletter navigation.</li>
+</ul>
+
 <h2>changes on Sunday, January 21, 2024:</h2>
 <ul>
 <li>added more includes. form(not prepared), map, sound_pool, strings.</li>
