• added ms_to_readable_time(double) function to hip.ngt in general folder. this function allows you to display the readable time as the millisecond is specified. • as from the previous commit, added dlplay in dialog, and inventory class has been added. both of them have been requested by Ivan Soto. • added tests as well.

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,13 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2> changes on Thursday, January 25, 2024:</h2>
+<ul>
+<li>added ms_to_readable_time(double) function to hip.ngt in general folder. this funcion allows you to display the readable time as the millisecond is specified.</li>
+<li>as from the previous commit, added dlplay in dialog, and inventory class has been added. both of them have been requested by Ivan Soto.</li>
+<li>added tests as well.</li>
+</ul>
+
 <h2>changes on Wednesday, January 24, 2024:</h2>
 <ul>
 <li>added multiversion class, which will allow you to manage string versions within your game, for instance, 1.4.3.2, which the integer / floatingpoint cannot handle.</li>
