custom menu changed
* added menu sounds in custom_menu. clicksound="", movesound=="", wrapsound=="", edgesound=="", opensound=="". you can see it in test.ngt for example.
* added menu sidescrooling and wrap. sidescrolling=false, wrap=false. these can be changed or get directly.
* fixed missing delay issues. note, the monitor functions have no delay functions used, and it is thus you have to call delay before using the menu.monitor();.
* as requested by abdallah hayder, the tab key has been added into custom_menu to repeat the title of the menu.

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,14 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2>changes on Friday, January 26, 2024:</h2>
+<ul>
+<li>added menu sounds in custom_menu. clicksound="", movesound=="", wrapsound=="", edgesound=="", opensound=="". you can see it in <code lang="NGT">test.ngt</code> for example.</li>
+<li>added menu sidescrooling and wrap. sidescrolling=false, wrap=false. these can be changed or get directly.</li>
+<li>fixed missing delay issues. note, the monitor functions have no delay functions used, and it is thus you have to call delay before using the menu.monitor();.</li>
+<li>as requested by abdallah hayder, the tab key has been added into custom_menu to repeat the title of the menu.</li>
+</ul>
+
 <h2> changes on Thursday, January 25, 2024:</h2>
 <ul>
 <li>you can now get any clicked item on custom_menu object, by using get_click() method.</li>
