added multiletter navigation support to lists in custom_menu, now you can use it as normal menu items!

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,11 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2>changes on Saturday, January 27, 2024:</h2>
+<ul>
+<li>added multiletter navigation support to lists in custom_menu, now you can use it as normal menu items!</li>
+</ul>
+
 <h2>changes on Friday, January 26, 2024:</h2>
 <ul>
 <li>removed the set_position in custom_menu, and added focus method instead. the focus method takes 1 parameter, either a string of the reference name or the position.</li>
