added escape support to custom_menu object. the bool property, escapeable. this property is true by default. warning! using escape setting true is necessary to use is_running method in your while loop. e.g, while(menu.is_running());. go view test.ngt If you're insure about how its usage.

--- a/changes.html
+++ b/changes.html
@@ -9,6 +9,11 @@
 
 <h1>Changes</h1>
 <p><a href="https://github.com/harrymkt/ngt-docs">Visit this repo to get documentations</a></p>
+<h2>changes on Sunday, January 28, 2024:</h2>
+<ul>
+<li>added escape support to custom_menu object. the bool property, <code>escapeable</code>. this property is true by default. warning! using escape setting true is necessary to use is_running method in your while loop. e.g, <code>while(menu.is_running());</code>. go view test.ngt If you're insure about how its useage.</li>
+</ul>
+
 <h2>changes on Saturday, January 27, 2024:</h2>
 <ul>
 <li>added multiletter navigation support to lists in custom_menu, now you can use it as normal menu items!</li>
